[gd_scene format=3 uid="uid://dejdmkeu64b8f"]

[ext_resource type="Script" uid="uid://c8u61jef6bpxd" path="res://scripts/ui/GameOverScreen.gd" id="1_0pcqs"]

[node name="GameOverScreen" type="Control" unique_id=1334086885]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0pcqs")

[node name="DimBackground" type="ColorRect" parent="." unique_id=1568110819]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8627451)

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=1058651322]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContainer" type="VBoxContainer" parent="CenterContainer" unique_id=367912470]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="CenterContainer/MainContainer" unique_id=1917086931]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 64
text = "GAME OVER"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="CenterContainer/MainContainer" unique_id=280958597]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TimeLabel" type="Label" parent="CenterContainer/MainContainer/StatsContainer" unique_id=436073725]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Time Survived: 0:00"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="CenterContainer/MainContainer/StatsContainer" unique_id=982216020]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Level Reached: 1"
horizontal_alignment = 1

[node name="KillsLabel" type="Label" parent="CenterContainer/MainContainer/StatsContainer" unique_id=668716262]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Enemies Killed: 0"
horizontal_alignment = 1

[node name="BossesLabel" type="Label" parent="CenterContainer/MainContainer/StatsContainer" unique_id=165176433]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Bosses Defeated: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="CenterContainer/MainContainer" unique_id=1025888922]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RESTART"
